# StableMatching

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GaleShapleyAllocation.cpp  GaleShapleyAllocation.h  GenerateDataFile  GenerateDataFile.cpp  GenerateDataFile.h  GreedyMatching.cpp  GreedyMatching.h  HungarianAlgorithm.cpp  HungarianAlgorithm.h  LearningConnector.cpp  Makefile  PageRank.cpp  README.md  RunTests.cpp  barrett_matr_f.csv  barrett_transpose.csv  build_lp.cpp  build_lp.h  cmake_install.cmake  echo_instance.cpp  echo_instance.h  foo.lp  galeShapley.cpp  generate_data_file.cpp  generate_data_file.h  generated_small.csv  greedyMatching.cpp  greedyMatching.h  greedy_matching.cpp  greedy_matching.h  kaiser_matr.csv  kaiser_transpose.csv  learning.py  main.cpp  main.py  matching_utilities.cpp  matching_utilities.h  (+23 more)
cplex/: build_lp.cpp  commands.txt  foo.lp
datasets/: 10sample.txt  even100.txt  generated.csv  global100.txt  location100.txt  obj5.txt  preferenceLists.txt  random100.txt  soln100.txt  unbalanced.txt  unbalanced2.txt  weightedData.txt  weightedDataFormat.txt
depreciated/: CMakeLists.txt  GaleShapleyAllocation.cpp  GenerateDataFileOld.cpp  GenerateDataFileOld.h  HungarianAlgorithm.cpp  HungarianDijkstra.cpp  OldGreedyMatching.cpp  OldGreedyMatching.h  PageRankOld.cpp  matrix.h  readAnnotationFormat.cpp
depreciated/datasets/: GSApreferenceLists.txt
docs/: data.tsv  index.html
output/: greedy.csv
proj/: .Rhistory  app.R  bh1987.csv  bh1987_links.csv  bh1987_nodes.csv  bh_links_temp.csv  bh_nodes_temp.csv  kb2009.csv  kb2009_links.csv  kb_links.csv  (+8 more)
(+15 files in other folders)
